--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
+    "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
     "prettier": "^2.1.2",
     "ts-loader": "^8.0.5",
-    "webpack": "^5.0.0",
+    "webpack": "4.42.0",
     "webpack-cli": "^4.0.0"
   }
 }
