--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
+    "styled-normalize": "^8.0.7",
     "typescript": "~3.7.2"
   },
   "scripts": {
