add radar chart & update lists interface

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.9",
@@ -16,7 +17,9 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.27",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^6.6.0",
