--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.9.1",
     "react-icons": "^3.11.0",
     "react-masonry-css": "^1.0.14",
     "react-redux": "^7.2.1",
