--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
     "@types/chart.js": "^2.9.27",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -58,10 +56,13 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
+    "http-proxy-middleware": "^1.0.6",
     "prettier": "^2.1.2",
     "ts-loader": "^8.0.5",
     "webpack": "4.42.0",
