--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "biba",
   "version": "0.1.0",
   "private": true,
+  "main": "index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -58,11 +59,15 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
+    "html-webpack-plugin": "^4.5.0",
     "http-proxy-middleware": "^1.0.6",
+    "mini-css-extract-plugin": "^1.2.1",
     "prettier": "^2.1.2",
     "ts-loader": "^8.0.5",
     "webpack": "4.42.0",
