--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@typescript-eslint/parser": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
