--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-lottie": "^1.2.5",
     "axios": "^0.20.0",
     "chart.js": "^2.9.4",
     "react": "^16.13.1",
@@ -14,7 +15,9 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.9.1",
     "react-icons": "^3.11.0",
+    "react-lottie": "^1.2.3",
     "react-masonry-css": "^1.0.14",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
